@@ -1,4 +1,6 @@
 version 2024a, in progress
+- "plot" command: update the help text and apply a fix for the
+  case of showing multiple bands
 - Fix broken backward compatibility in handling of backslash
   followed by double-quote in string literals
 - Fix bug: crash when plotting matrix data with the multiple
